--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@ body {
   </header>
   <section id="about">
     <!-- Profile Image -->
-    <img src="profile.jpg" alt="Harika Yenuga" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px;">
+    <img src="harika_image.jpg" alt="Harika Yenuga" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px;">
     
     <h2>Ready to Know Me?</h2>
     <div class="about-content">
