--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ body {
 <body>
   <header>
     <div class="logo">
-      <h1>Welcome to My Portfolio Tech Savys!!!!</h1>
+      <h1>Welcome to My Portfolio, Tech Savys!!!!</h1>
       <p style="text-align: center;">
     </div>
     <nav>
