--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@ skills.forEach(skill => observer.observe(skill));
   <div class="cert-card" style="background: #f3a99c; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
     <h3 style="font-size: 1.2rem; color: #333;">Hands-On Introduction: Python</h3>
     <p><strong>Issued By:</strong> LinkedIn</p>
-    <p><a href="Certifications/LinkedIn/CertificateOfCompletion_HandsOn Introduction Python.pdf" target="_blank" style="color: #010d1a; text-decoration: none; font-weight: bold;">View Certificate</a></p>
+    <p><a href="https://www.linkedin.com/learning/certificates/c9401e01881f7607f3965f8483e3121a0e00091ca5097d3627092032273ea575?u=279222306" target="_blank" style="color: #010d1a; text-decoration: none; font-weight: bold;">View Certificate</a></p>
   </div>
   <div class="cert-card" style="background: #f3a99c; border-radius: 15px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
     <h3 style="font-size: 1.2rem; color: #333;">Machine Learning with Scikit-Learn</h3>
