--- a/index.html
+++ b/index.html
@@ -1057,171 +1057,149 @@ body {
   </script>
 </section>
 
-<section>
-    <!-- Certifications Section -->     
-    <h2>My Certifications</h2>
-        <section id="certifications" style="padding: 50px; background: linear-gradient(80deg, #09011a);">
-    <div class="Certifications-content">
-    <h4 class="text-center text-3xl font-extrabold text-gray-900 mb-8">
-      🎓 **Certification Overload: One Learner, Too Many Courses!** 🚀 I’m the proud owner of an ever-growing collection of certifications — from Data Analytics to Machine Learning, from SQL mastery to Python wizardry. 📚✨ It's safe to say I’ve been on a non-stop learning spree, constantly adding new skills and tools to my arsenal like a data-driven superhero building their ultimate toolkit! 🦸‍♀️💻
-
+<section id="certifications" style="padding: 50px; background: linear-gradient(80deg, #09011a, #1a1a2e); color: #fff;">
+  <div class="Certifications-content">
+    <h2 class="text-center text-4xl font-extrabold text-gray-100 mb-8">My Certifications</h2>
+    <p class="text-center text-xl font-semibold text-gray-300 mb-8">
+      🎓 <strong>Certification Overload: One Learner, Too Many Courses!</strong> 🚀 I’m the proud owner of an ever-growing collection of certifications — from Data Analytics to Machine Learning, from SQL mastery to Python wizardry. 📚✨ It's safe to say I’ve been on a non-stop learning spree, constantly adding new skills and tools to my arsenal like a data-driven superhero building their ultimate toolkit! 🦸‍♀️💻
+    </p>
+    <p class="text-center text-xl font-semibold text-gray-300 mb-8">
       There are so many certifications here, you might want to grab a snack and settle in — it's a journey through the many courses and knowledge I’ve picked up along the way. Ready? Let’s dive into my education adventure! 🌟
-    </h4>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meta Certification Card</title>
-    <style>
-        /* Container to center the certification card */
-        .cert-card-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 50px;
-        }
-
-        /* Styling for the certification card */
-        .meta-cert-card {
-            background: #fff;
-            border-radius: 20px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 600px;
-            padding: 30px;
-            text-align: center;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        }
-
-        .meta-cert-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
-        }
-
-        .meta-cert-card img {
-            max-width: 120px;
-            width: 100%;
-            height: auto;
-            margin-bottom: 20px;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .meta-cert-card:hover img {
-            transform: scale(1.1);
-        }
-
-        .meta-cert-card h2 {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .meta-cert-card:hover h2 {
-            color: #007BFF;
-        }
-
-        .meta-cert-card p {
-            font-size: 1.1rem;
-            color: #666;
-            line-height: 1.5;
-            margin-bottom: 20px;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .meta-cert-card:hover p {
-            color: #555;
-        }
-
-        .btn {
-            padding: 15px 30px;
-            background-color: #007BFF;
-            color: white;
-            font-size: 1.2rem;
-            border-radius: 25px;
-            text-decoration: none;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-        }
-
-        .btn:active {
-            transform: scale(0.95);
-        }
-
-        @media (max-width: 768px) {
-            .meta-cert-card {
-                padding: 20px;
-            }
-
-            .meta-cert-card h2 {
-                font-size: 1.6rem;
-            }
-
-            .meta-cert-card p {
-                font-size: 1rem;
-            }
-
-            .btn {
-                font-size: 1rem;
-                padding: 12px 24px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .meta-cert-card {
-                padding: 15px;
-            }
-
-            .meta-cert-card h2 {
-                font-size: 1.3rem;
-            }
-
-            .meta-cert-card p {
-                font-size: 0.9rem;
-            }
-
-            .btn {
-                font-size: 0.9rem;
-                padding: 10px 20px;
-            }
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Certification Card Container -->
+    </p>
     <div class="cert-card-container">
-        <div class="meta-cert-card">
-            <div>
-                <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
-            </div>
-            <h2>Meta Data Analyst Certification</h2>
-            <p>
-                I am proud to share that I’ve earned the **Meta Data Analyst Certification** from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
-            </p>
-            <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
+      <div class="meta-cert-card">
+        <div>
+          <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
         </div>
+        <h2>Meta Data Analyst Certification</h2>
+        <p>
+          I am proud to share that I’ve earned the <strong>Meta Data Analyst Certification</strong> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
+        </p>
+        <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
+      </div>
     </div>
+  </div>
+</section>
 
-    <script>
-        // JavaScript for handling smooth link opening
-        const btn = document.querySelector('.btn');
-        
-        btn.addEventListener('click', function(event) {
-            event.preventDefault();
-            window.open(btn.getAttribute('href'), '_blank');
-        });
-    </script>
+<style>
+  .cert-card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
 
-</body>
-</html>
+  .meta-cert-card {
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 600px;
+    padding: 30px;
+    text-align: center;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  }
+
+  .meta-cert-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+  }
+
+  .meta-cert-card img {
+    max-width: 120px;
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .meta-cert-card:hover img {
+    transform: scale(1.1);
+  }
+
+  .meta-cert-card h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .meta-cert-card:hover h2 {
+    color: #007BFF;
+  }
+
+  .meta-cert-card p {
+    font-size: 1.1rem;
+    color: #666;
+    line-height: 1.5;
+    margin-bottom: 20px;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .meta-cert-card:hover p {
+    color: #555;
+  }
+
+  .btn {
+    padding: 15px 30px;
+    background-color: #007BFF;
+    color: white;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    text-decoration: none;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+
+  .btn:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+  }
+
+  .btn:active {
+    transform: scale(0.95);
+  }
+
+  @media (max-width: 768px) {
+    .meta-cert-card {
+      padding: 20px;
+    }
+
+    .meta-cert-card h2 {
+      font-size: 1.6rem;
+    }
+
+    .meta-cert-card p {
+      font-size: 1rem;
+    }
+
+    .btn {
+      font-size: 1rem;
+      padding: 12px 24px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .meta-cert-card {
+      padding: 15px;
+    }
+
+    .meta-cert-card h2 {
+      font-size: 1.3rem;
+    }
+
+    .meta-cert-card p {
+      font-size: 0.9rem;
+    }
+
+    .btn {
+      font-size: 0.9rem;
+      padding: 10px 20px;
+    }
+  }
+</style>
+
 
     <div class="Certifications-container">
       <section id="datacamp-certifications" style="padding: 50px; background-color: #f9f9f9;">
@@ -1788,44 +1766,43 @@ body {
   <footer id="contact" class="bg-gradient-to-b from-gray-900 via-gray-800 to-gray-900 text-white py-16">
     <div class="container mx-auto text-center px-6 lg:px-16">
       <!-- Call-to-Action -->
-      <h2 class="text-4xl font-extrabold mb-6">
-        Let’s Collaborate!
-      </h2>
-      <p class="text-lg text-gray-300 mb-8 leading-relaxed">
-        Got a project, an opportunity, or just want to chat? I’m eager to connect and collaborate. Let’s work together to craft innovative, data-driven solutions that drive real results. Reach out, and let's get started
+      <h2 class="text-4xl font-extrabold mb-4">Let’s Collaborate!</h2>
+      <p class="text-lg text-gray-300 mb-6 max-w-2xl mx-auto">
+        Got a project, an opportunity, or just want to chat? I’m eager to connect and collaborate. 
+        Let’s work together to craft innovative, data-driven solutions that drive real results.
       </p>
 
       <!-- Buttons for Hiring Managers -->
-      <div class="flex justify-center gap-6 flex-wrap mb-10">
+      <div class="flex justify-center gap-6 flex-wrap mb-8">
         <a href="mailto:harika20y@gmail.com" 
-           class="px-8 py-4 bg-green-500 hover:bg-green-600 text-white font-semibold rounded-full transition-all shadow-sm hover:shadow-md">
+           class="px-8 py-4 bg-green-500 hover:bg-green-600 text-white font-semibold rounded-full transition-all shadow-md hover:shadow-lg">
           ✉️ Email Me
         </a>
         <a href="https://www.linkedin.com/in/harika-ye" target="_blank" 
-           class="px-8 py-4 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-full transition-all shadow-sm hover:shadow-md">
+           class="px-8 py-4 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-full transition-all shadow-md hover:shadow-lg">
           🔗 Connect on LinkedIn
         </a>
       </div>
 
       <!-- Social Links -->
-      <div class="socials flex justify-center space-x-6 text-2xl mb-6">
-        <a href="https://github.com/yenugah80" target="_blank" class="hover:text-gray-300 hover:scale-110 transition-transform">
+      <div class="flex justify-center space-x-6 text-2xl mb-8">
+        <a href="https://github.com/yenugah80" target="_blank" class="social-icon">
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/harika-ye" target="_blank" class="hover:text-gray-300 hover:scale-110 transition-transform">
+        <a href="https://www.linkedin.com/in/harika-ye" target="_blank" class="social-icon">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/h.a.r.i.k.aa" target="_blank" class="hover:text-gray-300 hover:scale-110 transition-transform">
+        <a href="https://www.instagram.com/h.a.r.i.k.aa" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="mailto:harika20y@gmail.com" class="hover:text-gray-300 hover:scale-110 transition-transform">
+        <a href="mailto:harika20y@gmail.com" class="social-icon">
           <i class="fas fa-envelope"></i>
         </a>
       </div>
 
       <!-- Final Note -->
-      <p class="text-sm text-gray-400 mt-4">
-        &copy; 2025 Harika Yenuga. All Rights Reserved. | 
+      <p class="text-sm text-gray-400">
+        &copy; 2025 Harika Yenuga. All Rights Reserved. |
         <span class="font-semibold">Let’s turn your data into actionable insights!</span>
       </p>
     </div>
@@ -1847,9 +1824,20 @@ body {
 
 <!-- Custom CSS -->
 <style>
-  /* General button styling */
+  /* General Styling */
   a {
     text-decoration: none;
+  }
+
+  /* Social Icons */
+  .social-icon {
+    color: white;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+
+  .social-icon:hover {
+    color: #00c853; /* Green highlight */
+    transform: scale(1.2);
   }
 
   /* Scroll-to-Top Button */
@@ -1863,7 +1851,7 @@ body {
     padding: 15px;
     border-radius: 50%;
     cursor: pointer;
-    display: none; /* Hidden initially */
+    display: none; /* Initially hidden */
     font-size: 20px;
     transition: all 0.3s ease;
   }
@@ -1876,7 +1864,7 @@ body {
   /* Floating Contact Button */
   .contact-btn {
     position: fixed;
-    bottom: 20px;
+    bottom: 80px; /* Adjusted to avoid overlap */
     right: 20px;
     background-color: #28a745;
     color: white;
@@ -1893,48 +1881,15 @@ body {
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
   }
 
-  /* Social Icons Hover Effects */
-  .socials {
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-  }
-
-  .social-icon {
-    color: #333;
-    font-size: 24px;
-    transition: transform 0.3s ease, color 0.3s ease;
-  }
-
-  .social-icon:hover {
-    color: #00c853; /* Hover color */
-    transform: scale(1.15); /* Slight enlargement */
-  }
-
-  .social-icon i {
-    vertical-align: middle;
-  }
-
   /* Footer Section Styling */
   footer {
-    background: linear-gradient(to bottom, #1f2937, #111827, #1f2937);
-  }
-
-  .socials a {
-    color: inherit;
-    transition: transform 0.3s ease, color 0.3s ease;
+    background: linear-gradient(to bottom, #161616, #1c1f29, #3a3e56); /* Dark gradient */
+    color: #fff;
+    text-align: center;
   }
 
   /* Responsive adjustments */
   @media (max-width: 768px) {
-    h2 {
-      font-size: 1.75rem;
-    }
-
-    p {
-      font-size: 0.9rem;
-    }
-
     .socials {
       flex-wrap: wrap;
       gap: 12px;
@@ -1942,6 +1897,10 @@ body {
 
     .socials a {
       margin-bottom: 8px;
+    }
+
+    .contact-btn {
+      bottom: 70px; /* Adjust for smaller screens */
     }
   }
 
@@ -1953,6 +1912,10 @@ body {
 
     p {
       font-size: 0.85rem;
+    }
+
+    .contact-btn {
+      bottom: 60px; /* Further adjust */
     }
   }
 </style>
@@ -1972,6 +1935,5 @@ body {
     window.scrollTo({ top: 0, behavior: "smooth" });
   };
 </script>
-
 </body>
 </html>
