--- a/index.html
+++ b/index.html
@@ -723,13 +723,14 @@ body {
     window.onload = typeWriter;
 </script>
 
-<section id="experience" class="py-10" style="background: linear-gradient(135deg, #414170, #16213e, #597392, #e94560); padding: 60px; border-radius: 20px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">    
+<section id="professional-background" class="py-10" style="background: linear-gradient(135deg, #9090c4, #82e4df, #597392, #6b4148); padding: 60px; border-radius: 20px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
   <div class="container mx-auto px-6">
-    <h2 class="text-4xl font-bold text-center mb-6" style="color: #ebcbcb;">My Professional Experience</h2>
-    <p class="text-xl text-gray-200 text-center mb-4" style="font-style: italic; font-weight: 500;">
+    <h2 class="text-4xl font-bold text-center mb-6" style="color: #0c0000; font-family: 'Merriweather', serif;">My Professional Experience</h2>
+    <p class="text-xl text-gray-200 text-center mb-4" style="font-style: italic; font-weight: 500; font-family: 'Merriweather', serif;"></p>
       Embarking on a journey of transforming data into actionable insights, automating workflows, and visualizing impactful stories. 
       Here’s a glimpse of my professional milestones and contributions in the data realm.
     </p>
+  </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <!-- Card 1 -->
       <div class="experience-card shadow-lg rounded-xl bg-white p-6">
@@ -788,7 +789,7 @@ body {
     }
 
     #experience {
-      background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460, #e94560);
+      background: linear-gradient(135deg, #2c3e50, #34495e, #4a69bd, #6a89cc);
       padding: 3rem 1rem;
       border-radius: 20px;
       box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
@@ -859,7 +860,7 @@ body {
 
     .highlight {
       font-weight: bold;
-      color: #e94560;
+      color: #140104;
     }
 
     @media (max-width: 768px) {
@@ -891,7 +892,6 @@ body {
     }
   </style>
 </section>
-
 
 <section id="career-highlights" style="padding: 4rem; background: linear-gradient(135deg, #b3c2d4, #a772a4, #cfd9df, #a6c0fe); border-radius: 10px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
   <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 2rem; color: #1d0202;">CAREER HIGHLIGHTS</h2>
