--- a/index.html
+++ b/index.html
@@ -712,11 +712,11 @@ body {
 <script>
     /* Typing Effect */
     const text = "Harika, a Data Innovator!";
-    let i = 0;
+    let j = 0;
     function typeWriter() {
-        if (i < text.length) {
-            document.getElementById("typing").innerHTML += text.charAt(i);
-            i++;
+        if (j < text.length) {
+            document.getElementById("typing").innerHTML += text.charAt(j);
+            j++;
             setTimeout(typeWriter, 100);
         }
     }
